unpackaged/main/default/objects/nbavs__User__c/nbavs__User__c.object-meta.xml
<CustomObject>
    <label>Natterbox User</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Natterbox Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>