unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__AvailabilityProfileState__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AvailabilityProfileState__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Availability State</label>
    <referenceTo>nbavs__AvailabilityProfileState__c</referenceTo>
    <relationshipLabel>PBX Users</relationshipLabel>
    <relationshipName>PBX_Users</relationshipName>
    <type>Lookup</type>
</CustomField>