unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__CTI__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CTI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CTI</label>
    <type>Checkbox</type>
</CustomField>