unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__DialList__c.field-meta.xml
<CustomField>
    <fullName>nbavs__DialList__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dial List</label>
    <referenceTo>nbavs__DialList__c</referenceTo>
    <relationshipLabel>Users</relationshipLabel>
    <relationshipName>Users</relationshipName>
    <type>Lookup</type>
</CustomField>