unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__FirstName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__FirstName__c</fullName>
    <label>First Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>