unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__Insights__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Insights__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insight</label>
    <type>Checkbox</type>
</CustomField>