unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__LastName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LastName__c</fullName>
    <label>Last Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>