unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__LCRC__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LCRC__c</fullName>
    <label>LCRC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>