unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__Manager__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Centre</label>
    <type>Checkbox</type>
</CustomField>