unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>nbavs__MobilePhone__c</fullName>
    <label>Mobile</label>
    <type>Phone</type>
</CustomField>