unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__Numbers__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Numbers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Numbers</label>
    <type>Checkbox</type>
</CustomField>