unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__PBX__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PBX__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloud PBX</label>
    <type>Checkbox</type>
</CustomField>