unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__PCI__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PCI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PCI</label>
    <type>Checkbox</type>
</CustomField>