unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__PermissionLevel__c.field-meta.xml
<CustomField>
    <fullName>nbavs__PermissionLevel__c</fullName>
    <label>Permission Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
                <default>true</default>
                <label>Basic</label>
            </value>
            <value>
                <fullName>Team Leader</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>