unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__Pin__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Pin__c</fullName>
    <label>Pin</label>
    <length>8</length>
    <type>Text</type>
</CustomField>