unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__Record__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record</label>
    <type>Checkbox</type>
</CustomField>