unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__SCV__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SCV__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Service Cloud Voice</label>
    <type>Checkbox</type>
</CustomField>