unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__SipDevice__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SipDevice__c</fullName>
    <label>SipDevice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>