unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__SipExtension__c.field-meta.xml
<CustomField>
    <fullName>nbavs__SipExtension__c</fullName>
    <label>User Extension</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>