unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__TrackOutboundCTIDevice__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TrackOutboundCTIDevice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Track Outbound CTI Device</label>
    <type>Checkbox</type>
</CustomField>