unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__Update_Remote_Availability__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Update_Remote_Availability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Remote Availability</label>
    <type>Checkbox</type>
</CustomField>