unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__Username__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Username__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>