unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__VoicemailEmailAttachment__c.field-meta.xml
<CustomField>
    <fullName>nbavs__VoicemailEmailAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This diverts the message to be exclusively available as an email attachment. Check &#39;Copy to Voicemail Inbox&#39; to also save a copy in voicemail inbox.</inlineHelpText>
    <label>Messages available only via Email</label>
    <type>Checkbox</type>
</CustomField>