unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__VoicemailEmailNotifications__c.field-meta.xml
<CustomField>
    <fullName>nbavs__VoicemailEmailNotifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Notification for each Message</label>
    <type>Checkbox</type>
</CustomField>