unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__VoicemailEmailRecipients__c.field-meta.xml
<CustomField>
    <fullName>nbavs__VoicemailEmailRecipients__c</fullName>
    <inlineHelpText>Recipient Email Address(es) must be a comma-separated list of email addresses with no preceding or following characters.</inlineHelpText>
    <label>Recipient Email Address(es)</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>