unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__VoicemailInboxCopy__c.field-meta.xml
<CustomField>
    <fullName>nbavs__VoicemailInboxCopy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy to Voicemail Inbox</label>
    <type>Checkbox</type>
</CustomField>