unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__VoicemailUpdated__c.field-meta.xml
<CustomField>
    <fullName>nbavs__VoicemailUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Voicemail Settings Updated</label>
    <type>Checkbox</type>
</CustomField>