unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__WebphoneMode__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WebphoneMode__c</fullName>
    <defaultValue>&quot;Use Default&quot;</defaultValue>
    <label>WebPhone Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stable</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Use Default</fullName>
                <default>true</default>
                <label>Use Default</label>
            </value>
            <value>
                <fullName>Beta WebPhone</fullName>
                <isActive>false</isActive>
                <label>Beta WebPhone</label>
            </value>
            <value>
                <fullName>WebPhone</fullName>
                <isActive>false</isActive>
                <label>WebPhone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>