unpackaged/main/default/objects/nbavs__User__c/fields/nbavs__WebPhonePopupDisabled__c.field-meta.xml
<CustomField>
    <fullName>nbavs__WebPhonePopupDisabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WebPhone Disabled</label>
    <type>Checkbox</type>
</CustomField>