unpackaged/main/default/objects/nbavs__User__c/listViews/nbavs__All.listView-meta.xml
<ListView>
    <fullName>nbavs__All</fullName>
    <columns>NAME</columns>
    <columns>nbavs__Username__c</columns>
    <columns>nbavs__MobilePhone__c</columns>
    <columns>nbavs__Status__c</columns>
    <columns>nbavs__User__c</columns>
    <columns>nbavs__Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>